--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 certifi==2025.11.12
 charset-normalizer==3.4.4
 idna==3.11
-requests==2.32.5
+requests>=2.32.5
 urllib3==2.5.0
 coverage
-fastapi
-uvicorn
-jinja2
-python-multipart
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+jinja2>=3.1.2
+python-multipart>=0.0.6
