--- a/.github/workflows/python-ci.yaml
+++ b/.github/workflows/python-ci.yaml
@@ -26,10 +26,17 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
-          pip install coverage
 
-      # Step 4: Run tests with coverage
+      # Step 4: Install package
+      - name: Install package
+        run: |
+          pip install -e .
+
+      # Step 5: Run tests with coverage
       - name: Run tests
         run: |
           pytest --cov=starsystems --cov-report=term-missing
 
+      - name: Check coverage threshold
+        run: |
+          pytest --cov=starsystems --cov-fail-under=85
